fixed wrapping issue on mobile by reducing btn width

--- a/css/style.scss
+++ b/css/style.scss
@@ -66,7 +66,7 @@ img {
 }
 
 button.btn, input.btn {
-  padding: 12px 35px;
+  padding: 10px 25px;
   margin: 2em 0.5em;
   border: solid 1px #d5e0e7;
   border-radius: 4px;
@@ -142,6 +142,7 @@ button.btn, input.btn {
     margin: 2em 0 4em 0;
   }
   .hero-buttons {
+
     margin: 0 auto;
     display: table;
     i {
@@ -149,6 +150,7 @@ button.btn, input.btn {
     }
   }
 }
+
 
 /*--------------------------------------------------------------
 	2.1 Contact
@@ -276,7 +278,7 @@ button.btn, input.btn {
 /*
       &:after {
         content: '';
-        position: absolute;
+        position: relative;
         top: 1.5em;
         left: 0;
         width: 3em;
